# velocitypci-cli

./: .editorconfig  LICENSE  Makefile.in  README.md  annotated.html  bind_8h_source.html  classes.html  configure  configure.ac  crc_8c_source.html  crc_8h_source.html  diag_8c.html  diag_8c__incl.dot  diag_8c_source.html  diag_8h.html  diag_8h__dep__incl.dot  diag_8h__incl.dot  diag_8h_source.html  dir_000002_000000.html  dir_000003_000000.html  dir_2c3e26c67e8926144e9dab970917e9f6.html  dir_2c3e26c67e8926144e9dab970917e9f6_dep.dot  dir_97aefd0d527b934f1d99a682da8fe6a9.html  dir_97aefd0d527b934f1d99a682da8fe6a9_dep.dot  dir_bfccd401955b95cf8c75461437045ac0.html  dir_dfd218ccc229cddeb5649977d36ef894.html  endian_8h_source.html  errors_8h_source.html  events_8c.html  events_8c__incl.dot  events_8c_source.html  fabric_8c_source.html  fabric_8h_source.html  files.html  functions.html  functions_vars.html  fw_8c.html  fw_8c__incl.dot  fw_8c_source.html  gas_8h.html  (+477 more)
cli/: cli.rc  commands.c  common.h  diag.c  graph.c  graph.h  gui.c  main.c  mfg.c
completions/: bash-velocitypci-completion.sh
doc/: Doxyfile  index.md
lib/: diag.c  fw.c  ini.c  lib.rc  mfg.c  mrpc.c  switchtec.c  switchtec_priv.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  enums_0.js  (+57 more)
(+13 files in other folders)
